hphp/hack/test/typecheck/sealed/method_no_sealed_constructors.php.exp
WARN: File "method_no_sealed_constructors.php", line 6, characters 14-21:
Class `D` in sealed allowlist for method `__construct` in `C`, but does not extend `C` (Warn[12035])
ERROR: File "method_no_sealed_constructors.php", line 6, characters 5-12:
The `__Sealed` attribute cannot be used on a constructor. (Typing[4231])
